--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -35,6 +35,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transition: 0.35s;
   }
 
   svg {
@@ -168,6 +169,7 @@
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
+  transition: 0.35s;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
