--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,16 +241,18 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: 0.35s;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
       background-color: $c-light;
-      display: none;
       left: 0;
+      opacity: 0;
+      transition: 0.35s;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -273,6 +275,8 @@
     &.active {
       &::after {
         display: block;
+        width: 100%;
+        opacity: 1;
       }
     }
 
@@ -282,6 +286,7 @@
       outline: none;
 
       &::after {
+        width: 100%;
         opacity: 1;
         background-color: $c-purple;
       }
