--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -274,3 +274,25 @@
     }
   }
 }
+
+.swiper-slide-active .slider__item-text {
+  animation-name: fadeInLeft;
+  animation-timing-function: ease-out;
+  animation-duration: 1.5s;
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
