--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,7 +241,6 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
-    transition: 0.35s;
 
     &::after {
       content: "";
@@ -250,7 +249,7 @@
       width: 0;
       height: 2px;
       background-color: $c-light;
-      left: 0;
+      right: 0;
       opacity: 0;
       transition: 0.35s;
 
@@ -286,6 +285,8 @@
       outline: none;
 
       &::after {
+        left: 0;
+        right: unset;
         width: 100%;
         opacity: 1;
         background-color: $c-purple;
