--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -46,6 +46,8 @@
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
+  transform: translateY(101%);
+  transition: 0.35s cubic-bezier(0, 0.69, 0.36, 0.98);
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
@@ -67,6 +69,10 @@
       width: 100%;
       height: 16rem;
     }
+  }
+
+  body.loaded & {
+    transform: translateY(0);
   }
 }
 
