--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -38,6 +38,13 @@
     transition: 0.35s;
   }
 
+  .loaded &::before {
+    animation-name: growSocialToggle;
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0, 0.8, 1, 0.99);
+  }
+
   svg {
     @include center;
     display: block;
