--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -40,3 +40,20 @@
   }
 }
 
+@keyframes growSocialToggle {
+  0% {
+    width: 0;
+    height: 0;
+  }
+
+  50% {
+    width: 112.5%;
+    height: 112.5%;
+  }
+
+  100% {
+    width: 100%;
+    height: 100%;
+  }
+}
+
