--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -37,9 +37,9 @@
   color: $c-light;
   transform: translateX(-20px);
   opacity: 0;
-  transition: 0.35s cubic-bezier(0, 0.69, 0.36, 0.98);
+  transition: 0.7s cubic-bezier(0, 0.8, 1, 0.99);
 
-  body.loaded & {
+  .loaded & {
     transform: translateX(0);
     opacity: 1;
   }
@@ -139,9 +139,9 @@
   display: flex;
   align-items: center;
   opacity: 0;
-  transition: 0.35s cubic-bezier(0, 0.69, 0.36, 0.98);
+  transition: 0.7s cubic-bezier(0, 0.8, 1, 0.78);
 
-  body.loaded & {
+  .loaded & {
     opacity: 1;
   }
 
@@ -288,8 +288,15 @@
     &.active {
       &::after {
         display: block;
-        width: 100%;
+        width: 0;
+        left: 0;
+        right: unset;
         opacity: 1;
+        transition: 0.35s;
+      }
+
+      .loaded &.active::after {
+        width: 100%;
       }
     }
 
