--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -42,18 +42,15 @@
 
 @keyframes growSocialToggle {
   0% {
-    width: 0;
-    height: 0;
+    transform: translate(-50%, -50%) scale(0);
   }
 
   50% {
-    width: 112.5%;
-    height: 112.5%;
+    transform: translate(-50%, -50%) scale(1.125);
   }
 
   100% {
-    width: 100%;
-    height: 100%;
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
