--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -35,14 +35,6 @@
   padding: 1rem 0;
   width: 10rem;
   color: $c-light;
-  transform: translateX(-20px);
-  opacity: 0;
-  transition: 0.7s cubic-bezier(0, 0.8, 1, 0.99);
-
-  .loaded & {
-    transform: translateX(0);
-    opacity: 1;
-  }
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -138,12 +130,6 @@
 .page-header__nav {
   display: flex;
   align-items: center;
-  opacity: 0;
-  transition: 0.7s cubic-bezier(0, 0.8, 1, 0.78);
-
-  .loaded & {
-    opacity: 1;
-  }
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
@@ -260,17 +246,11 @@
       content: "";
       position: absolute;
       bottom: 0;
-      width: 0;
+      width: 100%;
       height: 2px;
       background-color: $c-light;
-      right: 0;
-      opacity: 0;
-      transition: 0.35s;
-
-      @media (min-width: $stop-scaling) {
-        left: -5px;
-        right: -5px;
-      }
+      display: none;
+      left: 0;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -288,15 +268,6 @@
     &.active {
       &::after {
         display: block;
-        width: 0;
-        left: 0;
-        right: unset;
-        opacity: 1;
-        transition: 0.35s;
-      }
-
-      .loaded &.active::after {
-        width: 100%;
       }
     }
 
@@ -306,9 +277,6 @@
       outline: none;
 
       &::after {
-        left: 0;
-        right: unset;
-        width: 100%;
         opacity: 1;
         background-color: $c-purple;
       }
