--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -5,6 +5,7 @@
 
   .swiper-wrapper {
     min-height: 100vh;
+    box-sizing: border-box;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(var(--vh, 1vh) * 100);
@@ -275,19 +276,3 @@
     }
   }
 }
-
-.swiper-slide-active .slider__item-text {
-  animation-name: fadeInLeft;
-  animation-timing-function: ease-out;
-  animation-duration: 1.5s;
-}
-
-.swiper-slide-next .slider__item-text {
-  opacity: 0;
-  animation-name: fadeInLeft;
-  animation-timing-function: ease-out;
-  animation-duration: 1.5s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
-}
-
