--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: flex-end;
   animation-name: grow;
+  animation-delay: 0.5s;
   animation-timing-function: ease-out;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
