--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -19,4 +19,5 @@
 @import "blocks/screen.scss";
 @import "blocks/slider.scss";
 @import "blocks/social-block.scss";
+@import "blocks/background.scss";
 @import "animations.scss";
