--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -77,3 +77,35 @@
     opacity: 1;
   }
 }
+
+@keyframes growRulesPoints {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1.03);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes growRulesLink {
+  0% {
+    width: 0;
+    color: #ffffff;
+  }
+
+  25% {
+    opacity: 1;
+    color: #ffffff;
+  }
+
+  100% {
+    width: auto;
+    color: $c-dark;
+    opacity: 1;
+  }
+}
