--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -83,7 +83,7 @@
     transform: scale(0);
   }
 
-  50% {
+  75% {
     transform: scale(1.03);
   }
 
@@ -94,7 +94,7 @@
 
 @keyframes growRulesLink {
   0% {
-    width: 0;
+    transform: translateX(50%) scale3d(0, 1, 1);
     color: #ffffff;
   }
 
@@ -104,7 +104,7 @@
   }
 
   100% {
-    width: auto;
+    transform: translateX(0) scale3d(1, 1, 1);
     color: $c-dark;
     opacity: 1;
   }
