--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,9 +93,12 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  opacity: 0;
   animation-name: fadeInUp;
-  animation-timing-function: ease-out;
-  animation-duration: 1.5s;
+  animation-timing-function: ease;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -144,6 +147,11 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-duration: 1.5s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 16px;
