--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -141,3 +141,17 @@
     opacity: 1;
   }
 }
+
+@keyframes movePrizeJourney {
+  0% {
+    transform: translateX(100%);
+  }
+
+  80% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
