--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -255,16 +255,18 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: 0.35s;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
+      right: 0;
       background-color: $c-light;
-      display: none;
-      left: 0;
+      transition: 0.35s;
+      opacity: 0;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -282,6 +284,8 @@
     &.active {
       &::after {
         display: block;
+        width: 100%;
+        opacity: 1;
       }
     }
 
@@ -291,6 +295,9 @@
       outline: none;
 
       &::after {
+        left: 0;
+        right: unset;
+        width: 100%;
         opacity: 1;
         background-color: $c-purple;
       }
