--- a/source/scss/blocks/prizes.scss
+++ b/source/scss/blocks/prizes.scss
@@ -188,18 +188,21 @@
     }
 
     .prizes__icon {
-      width: 18.8rem;
+      width: 26.8rem;
+      margin-left: -10rem;
 
       @media (min-width: $stop-scaling) {
-        width: 188px;
+        width: 268px;
       }
 
       @media (max-width: $tablet) and (orientation: portrait) {
+        margin-left: 0;
         margin-right: 1.3rem;
         width: 10.211rem;
       }
 
       @media (max-width: $tablet) and (orientation: landscape) {
+        margin-left: 0;
         width: 9.5rem;
       }
 
