--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -73,6 +73,12 @@
     stroke-width: 0.2rem;
     stroke-linejoin: round;
   }
+
+  path {
+    // animation-name: dash;
+    // animation-duration: 3s;
+    // animation-fill-mode: forwards;
+  }
 }
 
 .result__text {
