--- a/source/scss/animations.scss
+++ b/source/scss/animations.scss
@@ -155,3 +155,13 @@
     transform: translateX(0);
   }
 }
+
+@keyframes shrinkResultTitle {
+  0% {
+    transform: scale(1.15);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
