--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -359,4 +359,11 @@
     opacity: 1;
     pointer-events: auto;
   }
+
+  &.screen--show svg,
+  &.screen--show .result__text {
+    animation-name: shrinkResultTitle;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+  }
 }
