--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -2,11 +2,11 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  padding: 15rem 5.7rem 6rem;
+  padding: 12rem 5.7rem 6rem;
   width: 100%;
 
   @media (min-width: $stop-scaling) {
-    padding: 150px 57px 60px;
+    padding: 100px 57px 60px;
   }
 
   @media (orientation: portrait) {
@@ -67,6 +67,7 @@
   }
 
   svg {
+    opacity: 0;
     display: block;
     width: 100%;
     height: 100%;
@@ -244,7 +245,8 @@
   .result__title {
     margin-top: 9.5rem;
     width: 66.5rem;
-    height: 11.3rem;
+    height: 18.3rem;
+    min-height: 120px;
 
     @media (min-width: $stop-scaling) {
       margin-top: 95px;
@@ -268,3 +270,4 @@
     }
   }
 }
+
