--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -32,7 +32,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: -1;
+  z-index: 0;
 
   @media (orientation: portrait) {
     left: -1rem;
@@ -52,6 +52,14 @@
     object-fit: cover;
     object-position: center;
   }
+}
+
+.result__canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .result__title {
