--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -57,9 +57,16 @@
 .result__canvas {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
   right: 0;
   bottom: 0;
+  transform: translateX(-50%);
+
+  @media (max-width: $mobile) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .result__title {
